--- a/.github/workflows/trigger_vercel.yml
+++ b/.github/workflows/trigger_vercel.yml
@@ -2,7 +2,7 @@ name: Trigger Vercel Deploy
 
 on:
   schedule:
-    - cron: '0 */1 * * *' # 15분마다 실행
+    - cron: '* * * * *' # 15분마다 실행
 
 jobs:
   build:
