--- a/.github/workflows/trigger_vercel.yml
+++ b/.github/workflows/trigger_vercel.yml
@@ -1,14 +1,23 @@
 name: Trigger Vercel Deploy
 
+env:
+  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+  VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+  
 on:
   schedule:
-    - cron: '*/10 * * * *' # 15분마다 실행
+    - cron: '0 * * * *' # 매시 0분마다 실행
 
 jobs:
-  build:
+  Deploy-Production:
     runs-on: ubuntu-latest
     steps:
-    - name: Trigger Deployment # Github actions name
-      uses: wei/curl@master # 외부 액션
-      with:
-        args: -X https://api.vercel.com/v1/integrations/deploy/prj_ZpbyB3ue4WLO0bcVV3448ykBLqVf/nqLiPw4NTP
+      - uses: actions/checkout@v2
+      - name: Install Vercel CLI
+        run: npm install --global vercel@latest
+      - name: Pull Vercel Environment Information
+        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
+      - name: Build Project Artifacts
+        run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
+      - name: Deploy Project Artifacts to Vercel
+        run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
